# streamlit-monitor-rosa

./: .gitignore  README.md  dados_estados_mensal.csv  pyproject.toml  requirements.txt  streamlit_app.py
app/: data_loader.py  plot.py  utils.py
