[tool.poetry]
name = "streamlit-monitor-rosa"
version = "0.1.0"
description = "Aplicação para mostrar série histórica de métricas de pacientes com câncer de mama."
authors = ["Heber Augusto <heber.augusto@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
click = "8"
google-api-python-client = "^2.179.0"
pandas = "*"
plotly = "*"
streamlit = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
